Agregado tienda.html

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -218,7 +218,7 @@
             <div class="mt-5">
                 <button type="button" data-toggle="modal" data-target="#signIn" class="btn btn-primary nunito bordeNaranja fondoNaranja">Regístrate</button>
                 <div class="mt-2">
-                    <h6>¿Ya tienes cuenta? <u><a href="" class="login_link azulOscuro" data-toggle="modal" data-target="#login">Iniciar sesión</a></u></h6>
+                    <h6>¿Ya tienes cuenta? <u><a href="" class="poluzone_link azulOscuro" data-toggle="modal" data-target="#login">Iniciar sesión</a></u></h6>
                 </div>
             </div>
             <div class="m-5">
@@ -258,7 +258,7 @@
                 <div class="card-body">
                     <h3 class="card-title nunito azulOscuro">Sensores BLE</h3>
                     <p class="card-text azulOscuro">Tenemos una gran variedad de sensores, todos ellos funcionando con Bluetooth Low Energy para una duración. </p>
-                    <a href="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">Comprar sensores</a>
+                    <a href="tienda.html" class="btn btn-primary nunito bordeNaranja fondoNaranja">Comprar sensores</a>
                 </div>
             </div>
             <div class="card m-5" style="width: 18rem;">
