--- a/Servidor/ux/html/tienda.html
+++ b/Servidor/ux/html/tienda.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Poluzone | Descargas</title>
+        <title>Poluzone | Tienda</title>
 
         <link rel="stylesheet" href="app/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -56,16 +56,14 @@
                     </header>
                 </div>
                 <div class="container-fluid text-center heading pt-5 mt-5">
-                    <h1 class="h1 nunito"><i class="material-icons md-48">
-                        cloud_download
-                        </i>
-
-                        Descargas</h1>
-                    <p class="p nunito">Descarga la última versión de Poluzone
+                  <div>
+                      <img src="../images/tienda_dont_work.jpg" width="400" alt="">
+                  </div>
+                   <h1 class="h1 nunito">Tienda</h1>
+                    <p class="p nunito"><b>La tienda de Poluzone actualmente se encuentra en mantenimiento  :c</b>
                     </p>
                     <div class="mt-5">
-                        <button type="button" data-toggle="" data-target="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">
-                            Descargar</button>
+                       <u><a href="index.html" class="poluzone_link azulOscuro">Volver</a></u>
                         <div class="mt-2">
                         </div>
                     </div>
@@ -86,4 +84,4 @@ plugins que utilices) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
-</html>
+</html>s
