correción tienda.html

--- a/Servidor/ux/html/tienda.html
+++ b/Servidor/ux/html/tienda.html
@@ -55,11 +55,11 @@
                         </nav>
                     </header>
                 </div>
-                <div class="container-fluid text-center heading pt-5 mt-5">
+                <div class="container-fluid text-center heading pt-2">
                   <div>
-                      <img src="../images/tienda_dont_work.jpg" width="400" alt="">
+                      <img src="../images/tienda_dont_work.jpg" width="300" alt="">
                   </div>
-                   <h1 class="h1 nunito">Tienda</h1>
+                   <h1 class="h1 nunito mt-2">Tienda</h1>
                     <p class="p nunito"><b>La tienda de Poluzone actualmente se encuentra en mantenimiento  :c</b>
                     </p>
                     <div class="mt-5">
@@ -84,4 +84,4 @@ plugins que utilices) -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
-</html>s
+</html>
