Terminados los tabs

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -196,10 +196,10 @@
                                 <a class="nav-link" href="#signIn" data-toggle="modal" data-target="#signIn" hi>Registrarse</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Tutoriales</a>
+                                <a class="nav-link" href="tutoriales.html">Tutoriales</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Acerca de nosotros</a>
+                                <a class="nav-link" href="aboutUs.html">Acerca de nosotros</a>
                             </li>
                         </ul>
                         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -266,7 +266,7 @@
                 <div class="card-body">
                     <h3 class="card-title nunito azulOscuro">Mapa online</h3>
                     <p class="card-text nunito azulOscuro">Las mediciones tomadas se reflejan en nuestro mapa interactivo.</p>
-                    <a href="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">Ir al mapa</a>
+                    <a href="mapa.html" class="btn btn-primary nunito bordeNaranja fondoNaranja">Ir al mapa</a>
                 </div>
             </div>
         </div>     
