--- a/Servidor/ux/html/mapa.html
+++ b/Servidor/ux/html/mapa.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Poluzone | Descargas</title>
+        <title>Poluzone | Mapa</title>
 
         <link rel="stylesheet" href="app/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -55,17 +55,15 @@
                         </nav>
                     </header>
                 </div>
-                <div class="container-fluid text-center heading pt-5 mt-5">
-                    <h1 class="h1 nunito"><i class="material-icons md-48">
-                        cloud_download
-                        </i>
-
-                        Descargas</h1>
-                    <p class="p nunito">Descarga la última versión de la app de Poluzone
+                <div class="container-fluid text-center heading pt-2">
+                  <div>
+                      <img src="../images/tienda_dont_work.jpg" width="300" alt="">
+                  </div>
+                   <h1 class="h1 nunito mt-2">Mapa</h1>
+                    <p class="p nunito"><b>El mapa de Poluzone actualmente se encuentra en mantenimiento  :c</b>
                     </p>
                     <div class="mt-5">
-                        <button type="button" data-toggle="" data-target="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">
-                            Descargar</button>
+                       <u><a href="index.html" class="poluzone_link azulOscuro">Volver</a></u>
                         <div class="mt-2">
                         </div>
                     </div>
