--- a/Servidor/ux/html/tutoriales.html
+++ b/Servidor/ux/html/tutoriales.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Poluzone | Descargas</title>
+        <title>Poluzone | Tienda</title>
 
         <link rel="stylesheet" href="app/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
@@ -40,10 +40,10 @@
                                         <a class="nav-link" href="#signIn" data-toggle="modal" data-target="#signIn" hi>Registrarse</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Tutoriales</a>
+                                        <a class="nav-link active" href="#">Tutoriales<span class="sr-only">(current)</span></a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="#">Acerca de nosotros</a>
+                                        <a class="nav-link" href="aboutUs.html">Acerca de nosotros</a>
                                     </li>
                                 </ul>
                                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
@@ -55,17 +55,12 @@
                         </nav>
                     </header>
                 </div>
-                <div class="container-fluid text-center heading pt-5 mt-5">
-                    <h1 class="h1 nunito"><i class="material-icons md-48">
-                        cloud_download
-                        </i>
-
-                        Descargas</h1>
-                    <p class="p nunito">Descarga la última versión de la app de Poluzone
+                <div class="container-fluid text-center heading pt-2">
+                    <h1 class="h1 nunito mt-2">Tutoriales</h1>
+                    <p class="p nunito"><b>Aquí se subirá los tutoriales de como usar la app y el sensor Poluzone</b>
                     </p>
                     <div class="mt-5">
-                        <button type="button" data-toggle="" data-target="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">
-                            Descargar</button>
+                        <u><a href="index.html" class="poluzone_link azulOscuro">Volver</a></u>
                         <div class="mt-2">
                         </div>
                     </div>
