--- a/Servidor/ux/html/tienda.html
+++ b/Servidor/ux/html/tienda.html
@@ -26,7 +26,7 @@
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand nunito" href="#"> <img src="../images/earth.png" width="40" alt=""> Poluzone</a>
+                            <a class="navbar-brand nunito" href="index.html"> <img src="../images/earth.png" width="40" alt=""> Poluzone</a>
 
                             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
