--- a/Servidor/ux/html/aboutUs.html
+++ b/Servidor/ux/html/aboutUs.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
-        <title>Poluzone | about us</title>
+        <title>Poluzone | About us</title>
 
         <link rel="stylesheet" href="app/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/estilos.css">
