--- a/Servidor/ux/html/download.html
+++ b/Servidor/ux/html/download.html
@@ -68,6 +68,11 @@
                             Descargar</button>
                         <div class="mt-2">
                         </div>
+                        <div class="mt-5">
+                        <u><a href="index.html" class="poluzone_link azulOscuro">Volver</a></u>
+                        <div class="mt-2">
+                        </div>
+                    </div>
                     </div>
                     <div class="m-5">
 
