Responsive en la imagen ok

--- a/Servidor/ux/html/principal.html
+++ b/Servidor/ux/html/principal.html
@@ -124,13 +124,13 @@
     </div>
   </section>
   <section>
-    <div class="row">
-        <div class="col col-sm-4 col-md-6 col-lg-8 m-4">
-            <img src="../images/mapaGandia.PNG">
+    <div class="row d-flex-column">
+        <div class="col col-12 col-sm-12 col-md-6 col-lg-8">
+            <img class="rounded img-fluid" src="../images/mapaGandia.PNG">
         </div>
         <!-- La classe del siguiente DIV nos dice que es una columna, de 4 columnas en tamaño movil, 4 en tamaño tableta, 3 en tamaño ordenador
         con un margen de 4, y un margen automatico en el eje X, y un margen automatico en el eje Y -->
-        <div class="col col-sm-4 col-md-4 col-lg-3 m-4 mx-auto my-auto">
+        <div class="col col-12 col-sm-12 col-md-6 col-lg-3 mx-auto my-auto">
             <div class="card ">
                 <div class="card-header fondoGris bordeGris">
                     <label class="card-title blanco">Contaminación 1</label>
