small fixes principal.html disenyo

--- a/Servidor/ux/html/principal.html
+++ b/Servidor/ux/html/principal.html
@@ -95,13 +95,7 @@
                   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                           <li class="nav-item active">
-                              <a class="nav-link" href="#">Inicio<span class="sr-only">(current)</span></a>
-                          </li>
-                          <li class="nav-item a_login d-sm-none">
-                              <a class="nav-link" href="http://localhost:8080/ux/html/perfil.html" hi><i class="material-icons">perm_identity</i><p class="nunito inlineBlock" style="vertical-align: super;">  Perfil</p></a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link" href="#mapa"><i class="material-icons">map</i><p class="nunito inlineBlock" style="vertical-align: super;">  Mapa</p></a>
+                              <a class="nav-link" href="#mapa"><i class="material-icons">map</i><p class="nunito inlineBlock" style="vertical-align: super;">  Inicio<span class="sr-only">(current)</span></p></a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" href="#setup"><i class="material-icons">settings_applications</i><p class="nunito inlineBlock" style="vertical-align: super;">  Configuración</p></a>
@@ -124,32 +118,32 @@
     </div>
   </section>
   <section>
-    <div class="row d-flex-column">
-        <div class="col col-12 col-sm-12 col-md-6 col-lg-8">
+    <div class="row d-flex-column m-0">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-7 m-0 p-0">
             <img class="rounded img-fluid" src="../images/mapaGandia.PNG">
         </div>
         <!-- La classe del siguiente DIV nos dice que es una columna, de 4 columnas en tamaño movil, 4 en tamaño tableta, 3 en tamaño ordenador
         con un margen de 4, y un margen automatico en el eje X, y un margen automatico en el eje Y -->
-        <div class="col col-12 col-sm-12 col-md-6 col-lg-3 mx-auto my-auto">
-            <div class="card ">
+        <div class="col col-12 col-sm-12 col-md-12 col-lg-5 flex-column d-flex justify-content-start align-items-stretch pt-lg-5">
+            <div class="card shadow-sm m-4">
                 <div class="card-header fondoGris bordeGris">
                     <label class="card-title blanco">Contaminación 1</label>
                 </div>
                 <div class="card-body">
-                    <label id="valor"></label>
-                    <label id="tiempo"></label>
-                    <label id="latitud"></label>
+                    <label id="valor"></label><br>
+                    <label id="tiempo"></label><br>
+                    <label id="latitud"></label><br>
                     <label id="longitud"></label>
                 </div>
             </div>
-            <div class="card">
+            <div class="card shadow-sm m-4">
                 <div class="card-header fondoGris bordeGris">
                     <label class="card-title blanco">Contaminación 2</label>
                 </div>
                 <div class="card-body">
-                    <label id="valor1"></label>
-                    <label id="tiempo1"></label>
-                    <label id="latitud1"></label>
+                    <label id="valor1"></label><br>
+                    <label id="tiempo1"></label><br>
+                    <label id="latitud1"></label><br>
                     <label id="longitud1"></label>
                 </div>
                     
