anyadir seccion app y equipo

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -143,15 +143,15 @@
             <div class="container">
                 <div class="intro-text">
                     <div class="intro-heading">Poluzone</div>
-                    <div class="intro-lead-in">Poluzone es la app perfecta para registrar y estudiar la
-                        contaminación de tu ciudad gracias a su amplia red de sensores.</div>
+                    <div class="intro-lead-in">Poluzone realiza el mapeo de la
+                        contaminación de tu ciudad para ayudar a todos los ciudadanos</div>
                     <a class="btn-xl btn btn-primary text-uppercase js-scroll-trigger font-weight-bold" href="#mapa">VER
                         MAPA</a>
                 </div>
             </div>
         </header>
 
-        <!------------------------------------------------ Sección 1 -------------------------------------------------------->
+        <!------------------------------------------------ Sección Mapa -------------------------------------------------------->
 
         <section class="page-section container-fluid" id="mapa">
             <div class="container">
@@ -159,7 +159,30 @@
             </div>
         </section>
 
-        <!------------------------------------------------ Sección 2 -------------------------------------------------------->
+        <!------------------------------------------------ / Sección Mapa -------------------------------------------------------->
+
+        <!------------------------------------------------ Sección App -------------------------------------------------------->
+
+        <section class="page-section" id="app">
+            <div class="container download-app rounded shadow">
+                <div class="row p-1">
+                    <div class="download-app__image col-sm-1 col-md-5 my-auto text-center">
+                        <img src="../images/phone.jpg" class="w-75">
+                    </div>
+                    <div class="download-app__content col-sm-1 col-md-5 my-auto">
+                        <img src="../images/ic_launcher_round.png" width="70" alt="" class="my-4">
+                        <h2>Descarga la app</h2>
+                        <h5>¡Gracias a nuestra aplicación android puedes tener acceso a toda la información que
+                            necesitas
+                            en tu teléfono móvil!</h5>
+                        <img src="../images/google-play-badge.png" width="200" class="my-4">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!------------------------------------------------ / Sección App -------------------------------------------------------->
+
+        <!------------------------------------------------ Sección Tutoriales -------------------------------------------------------->
 
         <section class="section_2 container-fluid pt-5 p-0">
             <div class="d-flex flex-column text-center services mt-5 fondoOscuro blanco">
@@ -209,22 +232,50 @@
             </div>
         </section>
 
-        <!------------------------------------------------ /Sección 2 -------------------------------------------------------->
+        <!------------------------------------------------ / Sección Tutoriales -------------------------------------------------------->
 
+        <!------------------------------------------------ Sección Acerca de nosotros -------------------------------------------------------->
 
-        <!------------------------------------------------ Sección 3 -------------------------------------------------------->
-
-
-
-
-        <section class="d-flex flex-column text-center mt-5">
-            <div class="m-5">
-                <img src="../images/imagen_equipo2.jpg" width="480" alt="">
+        <section class="page-section d-flex flex-column text-center mt-5" id="about">
+            <h1 class="mb-5">Nuestro Equipo</h1>
+            <div class="row">
+                <div class="col">
+                    <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                    <h5 class="mt-3">Matt</h5>
+                    <p class="text-muted">Diseñador Principal</p>
+                </div>
+                <div class="col">
+                    <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                    <h5 class="mt-3">Diego</h5>
+                    <p class="text-muted">Desarrollador Web</p>
+                </div>
+                <div class="col">
+                    <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                    <h5 class="mt-3">Rosa</h5>
+                    <p class="text-muted">Scrum Master</p>
+                </div>
+                <div class="col">
+                    <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                    <h5 class="mt-3">Iván</h5>
+                    <p class="text-muted">Desarrollador App</p>
+                </div>
+                <div class="col">
+                    <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                    <h5 class="mt-3">Josep</h5>
+                    <p class="text-muted">Desarrollador Back End</p>
+                </div>
             </div>
+            <div class="container mt-4">
+                <h5>Somos un grupo de jóvenes emprendedores que trabajamos con metodología ágil (scrum). Lorem ipsum
+                    dolor sit amet, consectetur adipiscing elit. Morbi nec eros ac orci tristique pellentesque. Aliquam
+                    dignissim sit amet mauris et ullamcorper. Duis eu nisl sit amet turpis porta faucibus ullamcorper
+                    sit amet magna.
+                </h5>
+            </div>
+
         </section>
 
-
-        <!------------------------------------------------ /Sección 3 -------------------------------------------------------->
+        <!------------------------------------------------ / Sección Acerca de nosotros -------------------------------------------------------->
 
 
 
