--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -122,14 +122,13 @@
                         <a class="nav-link js-scroll-trigger" href="#app">App</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#tutoriales">Tutoriales</a>
+                        <a class="nav-link js-scroll-trigger" href="#mision">Nuestra misión</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#about">Acerca de nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#contact" data-toggle="modal"
-                            data-target="#contacto">Contacto</a>
+                        <a class="nav-link" href="#contact" data-toggle="modal" data-target="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -180,62 +179,55 @@
     </section>
     <!------------------------------------------------ / Sección App -------------------------------------------------------->
 
-    <!------------------------------------------------ Sección Tutoriales -------------------------------------------------------->
+    <!------------------------------------------------ Sección Mision -------------------------------------------------------->
 
-    <section class="section_2 container-fluid pt-5 p-0">
-        <div class="d-flex flex-column text-center services mt-5 fondoOscuro blanco">
-            <div>
-                <h1 class="nunito">Servicios</h1>
-            </div>
-            <div>
-                <p>Todos nuestros servicios son compatible con móvil y ordenador.</p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="card m-5" style="width: 18rem;">
-                    <img src="../images/imagen_mobile.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title nunito azulOscuro">Aplicación móvil</h3>
-                        <p class="card-text nunito azulOscuro">Nuestra app tiene muchas funciones como
-                            registrar la
-                            contaminación y poder verla en un mapa.</p>
-                        <a href="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">Descargar
-                            la
-                            aplicación</a>
+    <section class="page-section" id="mision">
+        <div class="fondoOscuro blanco">
+            <div class="text-center container mt-5">
+                <div class="pt-4 pb-2 p-lg-5">
+                    <h1 class="nunito mb-lg-5 text-uppercase">Nuestra Misión</h1>
+                    <div class="row mb-lg-5 mb-3">
+                        <img class="col-lg-6 d-none d-lg-inline" src="../images/imagen_BLExD.jpg" width="20">
+                        <div class="px-4 col-lg-6 my-lg-auto mt-2">
+                            <p class="text-justify">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt ut
+                                labore
+                                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris
+                                nisi
+                                ut
+                                aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                                velit
+                                esse
+                                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                                sunt
+                                in
+                                culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                            <a class="btn btn-primary text-uppercase font-weight-bold mt-3" href="#contact"
+                                data-toggle="modal" data-target="#contacto">+ INFORMACIÓN</a>
+                        </div>
                     </div>
-                </div>
-                <div class="card m-5" style="width: 18rem;">
-                    <img src="../images/imagen_BLE3.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title nunito azulOscuro">Sensores BLE</h3>
-                        <p class="card-text azulOscuro">Tenemos una gran variedad de sensores, todos
-                            ellos
-                            funcionando con Bluetooth Low Energy para una duración. </p>
-                        <a href="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">Comprar
-                            sensores</a>
-                    </div>
-                </div>
-                <div class="card m-5" style="width: 18rem;">
-                    <img src="../images/imagen_graficas.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h3 class="card-title nunito azulOscuro">Mapa online</h3>
-                        <p class="card-text nunito azulOscuro">Las mediciones tomadas se reflejan en
-                            nuestro
-                            mapa
-                            interactivo.</p>
-                        <a href="#" class="btn btn-primary nunito bordeNaranja fondoNaranja">Ir al
-                            mapa</a>
+                    <div class="row mt-3 mt-lg-0">
+                        <div class="col-md-6 text-center text-lg-right my-auto">
+                            <img src="../images/ayuntamiento.png" width="190" class="m-3">
+                        </div>
+                        <div class="col-md-6 text-center text-lg-left my-auto">
+                            <img src="../images/upv.png" width="200" class="m-3">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!------------------------------------------------ / Sección Tutoriales -------------------------------------------------------->
+    <!------------------------------------------------ / Sección Mision -------------------------------------------------------->
 
     <!------------------------------------------------ Sección Acerca de nosotros -------------------------------------------------------->
 
-    <section class="page-section d-flex flex-column text-center mt-5" id="about">
-        <h1 class="mb-5">Nuestro Equipo</h1>
+    <section class="page-section d-flex flex-column text-center mt-5 container" id="about">
+        <h1 class="mb-5 text-uppercase">Nuestro Equipo</h1>
         <div class="row">
             <div class="col">
                 <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
@@ -248,7 +240,7 @@
                 <p class="text-muted">Desarrollador Web</p>
             </div>
             <div class="col">
-                <img src="../images/imagen_equipo2.jpg" width="120" alt="" class="redonda">
+                <img src="../images/team-rosa.jpeg" width="120" alt="" class="redonda">
                 <h5 class="mt-3">Rosa</h5>
                 <p class="text-muted">Scrum Master</p>
             </div>
@@ -300,8 +292,7 @@
                 </div>
                 <div class="modal-body d-flex justify-content-center">
                     <form class="form-horizontal w-100">
-                            <input id="textR" type="text" class="form-control nunito" name="textR"
-                                placeholder="Nombre">
+                        <input id="textR" type="text" class="form-control nunito" name="textR" placeholder="Nombre">
                         </br>
                         <div class="input-group">
                             <input id="emailR" type="text" class="form-control nunito sizeM" name="emailR"
@@ -312,7 +303,8 @@
                                 placeholder="Número de teléfono">
                         </div></br>
                         <div class="input-group">
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Mensaje"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
+                                placeholder="Mensaje"></textarea>
                         </div></br>
                     </form>
                 </div>
