Margen Y interior tarjetas ajustado

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -145,19 +145,19 @@
                 <div class="tarjeta shadow bg-white rounded">
 
 
-                    <div class="iconoTarjeta">
+                    <div class="iconoTarjeta my-auto">
 
                         <img src="../images/sensor1.png" class="icono">
 
                     </div>
 
-                    <div class="textoTarjeta">
+                    <div class="textoTarjeta my-auto">
 
                         Número de sensores
 
                     </div>
 
-                    <div class="valorTarjeta">
+                    <div class="valorTarjeta my-auto">
 
                         232
 
@@ -170,19 +170,19 @@
                 <div class="tarjeta shadow bg-white rounded">
 
 
-                    <div class="iconoTarjeta">
+                    <div class="iconoTarjeta my-auto">
 
                         <img src="../images/tick2.png" class="icono">
 
                     </div>
 
-                    <div class="textoTarjeta">
+                    <div class="textoTarjeta my-auto">
 
                         Sensores activos
 
                     </div>
 
-                    <div class="valorTarjeta">
+                    <div class="valorTarjeta my-auto">
 
                         232
 
@@ -195,19 +195,19 @@
                 <div class="tarjeta shadow bg-white rounded">
 
 
-                    <div class="iconoTarjeta">
+                    <div class="iconoTarjeta my-auto">
 
                         <img src="../images/cross2.png" class="icono">
 
                     </div>
 
-                    <div class="textoTarjeta">
+                    <div class="textoTarjeta my-auto">
 
                         Sensores inactivos
 
                     </div>
 
-                    <div class="valorTarjeta">
+                    <div class="valorTarjeta my-auto">
 
                         232
 
@@ -217,22 +217,22 @@
 
                 <!----------------------------------- TARJETA 4 ----------------------------------------->
 
-                <div class="tarjeta shadow bg-white rounded">
+                <div class="tarjeta shadow bg-white rounded ">
 
 
-                    <div class="iconoTarjeta">
+                    <div class="iconoTarjeta my-auto">
 
                         <img src="../images/box2.png" class="icono">
 
                     </div>
 
-                    <div class="textoTarjeta">
+                    <div class="textoTarjeta my-auto">
 
                         Sensores<br>en stock
 
                     </div>
 
-                    <div class="valorTarjeta">
+                    <div class="valorTarjeta my-auto">
 
                         232
 
