--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -234,8 +234,10 @@
 
         <!------------------------------------------------ Sección Mapa -------------------------------------------------------->
 
-        <section class="section_mapa" id="map">
+        <section class="section_mapa">
+              <div class="map" id="map">
 
+        </div>
         </section>
 
 
@@ -285,9 +287,7 @@
 
         <!------------------------------------------------ /Sección 2 -------------------------------------------------------->
 
-        <div class="map">
-
-        </div>
+      
 
         <!------------------------------------------------ Sección 3 -------------------------------------------------------->
 
