agregado mapa temporal
mientras termino de activar la API este mapa será para hacer pruebas

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -234,7 +234,7 @@
 
         <!------------------------------------------------ Sección Mapa -------------------------------------------------------->
 
-        <section class="section_mapa">
+        <section class="section_mapa container-fluid p-0">
               <div class="map" id="map">
 
         </div>
@@ -329,7 +329,7 @@ plugins que utilices) -->
                 type="text/javascript"></script>
         <script>
             function initMap(){
-                var location = {lat: 38.996651, lng: -0.166009};
+                var location = {lat: 38.996, lng: -0.166};
                 var map = new google.maps.Map(document.getElementById("map"), {
                     zoom: 4,
                     center: location
