redistribucion tipo bootstrap
no va el subcuerpo

--- a/Servidor/ux/html/admin.html
+++ b/Servidor/ux/html/admin.html
@@ -68,6 +68,7 @@
             proxy.ComprobacionLogin(data);
 
         }
+
     </script>
 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Nunito" />
@@ -138,53 +139,60 @@
 
             <!----------------------------------- CONTENEDOR DE TARJETAS ----------------------------------------->
 
-            <div class="tarjetasInfoGeneral">
+            <div class="tarjetasInfoGeneral row">
 
                 <!----------------------------------- TARJETA 1 ----------------------------------------->
 
-                <div class="tarjeta shadow bg-white rounded">
+                <div class="col-lg-3">
 
+                    <div class="tarjeta shadow bg-white rounded my-auto">
 
-                    <div class="iconoTarjeta my-auto">
+                        <div class="iconoTarjeta my-auto">
 
-                        <img src="../images/sensor1.png" class="icono">
+                            <img src="../images/sensor1.png" class="icono">
 
-                    </div>
+                        </div>
 
-                    <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto">
 
-                        Número de sensores
+                            Número de sensores
 
-                    </div>
+                        </div>
 
-                    <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto">
 
-                        232
+                            232
+
+                        </div>
 
                     </div>
 
                 </div>
 
+
                 <!----------------------------------- TARJETA 2 ----------------------------------------->
 
-                <div class="tarjeta shadow bg-white rounded">
+                <div class="col-lg-3">
 
+                    <div class="tarjeta shadow bg-white rounded my-auto">
 
-                    <div class="iconoTarjeta my-auto">
+                        <div class="iconoTarjeta my-auto">
 
-                        <img src="../images/tick2.png" class="icono">
+                            <img src="../images/tick2.png" class="icono">
 
-                    </div>
+                        </div>
 
-                    <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto">
 
-                        Sensores activos
+                            Sensores activos
 
-                    </div>
+                        </div>
 
-                    <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto">
 
-                        232
+                            232
+
+                        </div>
 
                     </div>
 
@@ -192,24 +200,27 @@
 
                 <!----------------------------------- TARJETA 3 ----------------------------------------->
 
-                <div class="tarjeta shadow bg-white rounded">
+                <div class="col-lg-3">
 
+                    <div class="tarjeta shadow bg-white rounded my-auto">
 
-                    <div class="iconoTarjeta my-auto">
+                        <div class="iconoTarjeta my-auto">
 
-                        <img src="../images/cross2.png" class="icono">
+                            <img src="../images/cross2.png" class="icono">
 
-                    </div>
+                        </div>
 
-                    <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto">
 
-                        Sensores inactivos
+                            Sensores inactivos
 
-                    </div>
+                        </div>
 
-                    <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto">
 
-                        232
+                            232
+
+                        </div>
 
                     </div>
 
@@ -217,24 +228,27 @@
 
                 <!----------------------------------- TARJETA 4 ----------------------------------------->
 
-                <div class="tarjeta shadow bg-white rounded ">
+                <div class="col-lg-3">
 
+                    <div class="tarjeta shadow bg-white rounded my-auto">
 
-                    <div class="iconoTarjeta my-auto">
+                        <div class="iconoTarjeta my-auto">
 
-                        <img src="../images/box2.png" class="icono">
+                            <img src="../images/box2.png" class="icono">
 
-                    </div>
+                        </div>
 
-                    <div class="textoTarjeta my-auto">
+                        <div class="textoTarjeta my-auto">
 
-                        Sensores<br>en stock
+                            Sensores<br>en stock
 
-                    </div>
+                        </div>
 
-                    <div class="valorTarjeta my-auto">
+                        <div class="valorTarjeta my-auto">
 
-                        232
+                            232
+
+                        </div>
 
                     </div>
 
@@ -247,22 +261,34 @@
             <!----------------------------------- SUBCUERPO ----------------------------------------->
 
 
-            <div class="subcuerpo">
+            <div class="subcuerpo row">
 
                 <!----------------------------------- TARJETAS CON INFORMACION DE SENSORES ----------------------------------------->
 
-                <div class="tarjetasInfoSensores">
+                <div class="tarjetasInfoSensores col">
 
                     <!----------------------------------- TARJETA CON TODOS LOS SENSORES ----------------------------------------->
 
 
-                    <div class="tarjetaInfo shadow bg-white rounded">
+                    <div class="row-lg-6">
+
+                        <div class="tarjetaInfo shadow bg-white rounded">
+
+
+
+                        </div>
 
                     </div>
 
                     <!----------------------------------- TARJETA CON INFORMACION DE UN SENSOR ----------------------------------------->
 
-                    <div class="tarjetaInfo shadow bg-white rounded">
+                    <div class="row-lg-6">
+
+                        <div class="tarjetaInfo shadow bg-white rounded">
+
+
+
+                        </div>
 
                     </div>
 
@@ -272,7 +298,13 @@
 
                 <!----------------------------------- MAPA ----------------------------------------->
 
-                <div class="contenedorMapa shadow bg-white rounded">
+                <div class="col">
+
+                    <div class="contenedorMapa shadow bg-white rounded">
+
+
+
+                    </div>
 
                 </div>
 
@@ -281,10 +313,9 @@
 
             </div>
 
+            <!----------------------------------- /SUBCUERPO ----------------------------------------->
+
         </div>
-
-        <!----------------------------------- /SUBCUERPO ----------------------------------------->
-
 
         <!------------------------------------------------ /CUERPO -------------------------------------------------------->
 
@@ -325,4 +356,6 @@
 
 </body>
 
-<!----------------------------------------------------- /BODY -----------------------------------------------------------></html>
+<!----------------------------------------------------- /BODY ----------------------------------------------------------->
+
+</html>
