Empezando implementación GetMedidaPorFecha

--- a/Servidor/ux/html/index.html
+++ b/Servidor/ux/html/index.html
@@ -235,9 +235,9 @@
         <!------------------------------------------------ Sección Mapa -------------------------------------------------------->
 
         <section class="section_mapa container-fluid p-0">
-              <div class="map" id="map">
+            <div class="map" id="map">
 
-        </div>
+            </div>
         </section>
 
 
@@ -287,7 +287,7 @@
 
         <!------------------------------------------------ /Sección 2 -------------------------------------------------------->
 
-      
+
 
         <!------------------------------------------------ Sección 3 -------------------------------------------------------->
 
@@ -315,7 +315,7 @@
 
         <!-- Librería jQuery requerida por los plugins de JavaScript -->
         <script src="http://code.jquery.com/jquery.js"></script>
-f
+        f
         <!-- Todos los plugins JavaScript de Bootstrap (también puedes
 incluir archivos JavaScript individuales de los únicos
 plugins que utilices) -->
@@ -338,8 +338,10 @@ plugins que utilices) -->
                     position: location,
                     map: map
                 });
-                }
+            }
+            function drawMeasure(){
+                
+            }
         </script>
-
     </body>
 </html>
